# GSW-C-perf

./: CMakeLists.txt  README.md  flake.nix
src/: main.cc
